syntax = "proto3";

package users;

option go_package = "social-network/shared/gen-go/users;users";

import "common.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

// UserService covers auth, follow, group, and profile operations.
// Current behavior: handlers return INVALID_ARGUMENT for nil/failed validation and INTERNAL for all other errors.
// Desired (not yet implemented): surface UNAUTHENTICATED, PERMISSION_DENIED, NOT_FOUND, ALREADY_EXISTS, FAILED_PRECONDITION where appropriate.
service UserService {
  // Registers a new account and returns the created user profile.
  // Current: INVALID_ARGUMENT on bad input; INTERNAL on other failures. Desired: ALREADY_EXISTS when username/email is taken.
  rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse);

  // Authenticates by username/email identifier and password.
  // Current: INVALID_ARGUMENT on missing fields; INTERNAL otherwise. Desired: UNAUTHENTICATED for wrong credentials.
  rpc LoginUser (LoginRequest) returns (common.User);

  // Updates a user's password after verifying the current password.
  // Current: INVALID_ARGUMENT on bad ids/password; INTERNAL otherwise. Desired: UNAUTHENTICATED/PERMISSION_DENIED on mismatch.
  rpc UpdateUserPassword (UpdatePasswordRequest) returns (google.protobuf.Empty);

  // Updates the account email address.
  // Current: INVALID_ARGUMENT on bad input; INTERNAL otherwise. Desired: ALREADY_EXISTS for duplicate email.
  rpc UpdateUserEmail (UpdateEmailRequest) returns (google.protobuf.Empty);

  // Returns followers of a user with pagination.
  // Current: INVALID_ARGUMENT on bad pagination; INTERNAL otherwise. Desired: NOT_FOUND/PERMISSION_DENIED for hidden users.
  rpc GetFollowersPaginated (Pagination) returns (common.ListUsers);

  // Returns accounts the user is following with pagination.
  rpc GetFollowingPaginated (Pagination) returns (common.ListUsers);

  // Follows a target user; may create a pending request for private profiles.
  // Desired: ALREADY_EXISTS when already following, NOT_FOUND for missing users (not currently surfaced).
  rpc FollowUser (FollowUserRequest) returns (FollowUserResponse);

  // Unfollows a target user or cancels a pending follow request.
  rpc UnFollowUser (FollowUserRequest) returns (google.protobuf.Empty);

  // Accepts or rejects a pending follow request.
  rpc HandleFollowRequest (HandleFollowRequestRequest) returns (google.protobuf.Empty);

  // Returns ids that the user is following.
  rpc GetFollowingIds (google.protobuf.Int64Value) returns (common.UserIds);

  // Suggests users to follow based on the caller's network.
  rpc GetFollowSuggestions (google.protobuf.Int64Value) returns (common.ListUsers);

  // Returns whether follower_id currently follows target_user_id.
  rpc IsFollowing (IsFollowingRequest) returns (google.protobuf.BoolValue);

  // Returns whether both users follow each other.
  rpc AreFollowingEachOther (FollowUserRequest) returns (google.protobuf.BoolValue);

  // Lists all groups with pagination (visibility filtered for requester).
  rpc GetAllGroupsPaginated (Pagination) returns (GroupArr);

  // Lists groups the user belongs to with pagination.
  rpc GetUserGroupsPaginated (Pagination) returns (GroupArr);

  // Returns details for a single group visible to the requester.
  rpc GetGroupInfo (GeneralGroupRequest) returns (Group);

  // Returns members of a group with pagination.
  rpc GetGroupMembers (GroupMembersRequest) returns (GroupUserArr);

  // Searches for groups matching the search term for the requester.
  rpc SearchGroups (GroupSearchRequest) returns (GroupArr);

  // Invites a user to join a group.
  rpc InviteToGroup (InviteToGroupRequest) returns (google.protobuf.Empty);

  // Checks if the requester is a member of the given group.
  rpc IsGroupMember (GeneralGroupRequest) returns (google.protobuf.BoolValue);

  // Creates or cancels a join request for the group.
  rpc RequestJoinGroup (GroupJoinRequest) returns (google.protobuf.Empty);

  // Accepts or declines a received group invite.
  rpc RespondToGroupInvite (HandleGroupInviteRequest) returns (google.protobuf.Empty);

  // Approves or rejects a user's join request.
  rpc HandleGroupJoinRequest (HandleJoinRequest) returns (google.protobuf.Empty);

  // Leaves the specified group.
  rpc LeaveGroup (GeneralGroupRequest) returns (google.protobuf.Empty);

  // Creates a new group and returns its id.
  rpc CreateGroup (CreateGroupRequest) returns (google.protobuf.Int64Value);

  // Updates group info (title, description, image)
  rpc UpdateGroup (UpdateGroupRequest) returns (google.protobuf.Empty);

  // Retrieves basic public info for a user.
  rpc GetBasicUserInfo (google.protobuf.Int64Value) returns (common.User);

  // Retrieves basic info for multiple users.
  rpc GetBatchBasicUserInfo (common.UserIds) returns (common.ListUsers);

  // Returns the full profile visible to the requester.
  rpc GetUserProfile (GetUserProfileRequest) returns (UserProfileResponse);

  // Searches users by term for the requester.
  rpc SearchUsers (UserSearchRequest) returns (common.ListUsers);

  // Updates profile fields for the given user.
  rpc UpdateUserProfile (UpdateProfileRequest) returns (UserProfileResponse);

  // Toggles public/private profile visibility.
  rpc UpdateProfilePrivacy (UpdateProfilePrivacyRequest) returns (google.protobuf.Empty);
}

// PROFILE

message UserProfileResponse {
  int64 user_id = 1;
  string username = 2;
  string first_name = 3;
  string last_name = 4;
  google.protobuf.Timestamp date_of_birth = 5;
  int64 avatar = 6;
  string avatar_url=7;
  string about = 8;
  bool public = 9;
  google.protobuf.Timestamp created_at = 10;
  string email = 11;
  int64 followers_count = 12;
  int64 following_count = 13;
  int64 groups_count = 14;
  int64 owned_groups_count = 15;
  bool viewer_is_following = 16;
  bool own_profile = 17;
  bool is_pending = 18;
}

// REGISTER USER
message RegisterUserRequest {
  string username = 1;
  string first_name = 2;
  string last_name = 3;
  google.protobuf.Timestamp date_of_birth = 4;
  int64 avatar = 5;
  string about = 6;
  bool public = 7;
  string email = 8;
  string password = 9;
}

message RegisterUserResponse {
  int64 user_id = 1;
}

// LOGIN 
message LoginRequest {
  string identifier = 1;
  string password =2;
}

// UPDATE PASSWORD
message UpdatePasswordRequest {
    int64 user_id=1;
    string old_password = 2;
    string new_password = 3;
}

// UPDATE USER EMAIL
message UpdateEmailRequest {
    int64 user_id = 1;
    string email = 2;
}

// GET FOLLOWERS
message Pagination {
    int64 user_id = 1;
    int32 limit = 2;
    int32 offset = 3; 
}

// FOLLOW USER
message FollowUserRequest {
    int64 follower_id = 1;
    int64 target_user_id = 2;
}

message FollowUserResponse {
    bool is_pending = 1;
    bool viewer_is_following = 2;
}

message HandleFollowRequestRequest {
    int64 user_id = 1;
    int64 requester_id = 2;
    bool accept = 3;
}

message IsFollowingRequest {
    int64 follower_id = 1;
    int64 target_user_id = 2;
}

// GROUPS
message Group {
  int64 group_id = 1;
  int64 group_owner_id = 2;
  string group_title = 3;
  string group_description = 4;
  int64 group_image_id = 5;
  string group_image_url=6;
  int32 members_count = 7;
  bool is_member = 8;
  bool is_owner = 9;
  bool is_pending = 10;
}

message GroupArr {
  repeated Group group_arr = 1;
}

message GeneralGroupRequest {
  int64 group_id = 1;
  int64 user_id = 2;
}

message GroupMembersRequest {
  int64 user_id = 1;
  int64 group_id = 2;
  int32 limit = 3;
  int32 offset = 4; 
}

message GroupUser {
  int64 user_id = 1;
  string username = 2;
  int64 avatar = 3;
  string avatar_url=4;
  string group_role = 5;
}

message GroupUserArr {
  repeated GroupUser group_user_arr = 1;
}

message GroupSearchRequest {
  string search_term = 1;
  int64 user_id = 2;
  int32 limit = 3;
  int32 offset = 4;
}


message InviteToGroupRequest {
  int64 inviter_id = 1;
  int64 invited_id = 2;
  int64 group_id = 3;
}

message GroupJoinRequest {
  int64 group_id = 1;
  int64 requester_id = 2;
}

message HandleGroupInviteRequest {
  int64 group_id = 1;
  int64 invited_id = 2;
  bool accepted = 3;
}

message HandleJoinRequest {
  int64 group_id = 1;    
  int64 requester_id = 2;
  int64 owner_id = 3;
  bool accepted = 4;
}

message RemoveFromGroupRequest {
  int64 group_id = 1;  
  int64 member_id = 2;
  int64 owner_id = 3;
}

message CreateGroupRequest {
    int64 owner_id = 1; 
    string group_title = 2;
    string group_description = 3;
    int64 group_image_id = 4;
}

message UpdateGroupRequest{
  int64 requester_id=1;
  int64 group_id=2;
  string group_title = 3;
  string group_description = 4;
  int64 group_image_id = 5;
}


// GET USER PROFILE
message GetUserProfileRequest {
  int64 user_id = 1;
  int64 requester_id = 2;
}

message UserSearchRequest {
  string search_term = 1;
  int32 limit = 2;
}

message UpdateProfileRequest {
  int64 user_id = 1;
  string username = 2;
  string first_name = 3;
  string last_name = 4;
  google.protobuf.Timestamp date_of_birth = 5;
  int64 avatar = 6;
  string about = 7;
}

message UpdateProfilePrivacyRequest {
  int64 user_id = 1;
  bool public = 2;
}
